Add histogram to record changes in the network quality

Add histogram to record how frequently network quality
is detected as meaningfully changed.

Also, add DCHECKs to verify that the RTTs and throughput
values are as unexpected.

Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Bug: 798488
Change-Id: Ie0bbf1f691a002a9257bff4c089e9dc8d0156b86
Reviewed-on: https://chromium-review.googlesource.com/846285
Reviewed-by: Helen Li <xunjieli@chromium.org>
Reviewed-by: Robert Kaplow <rkaplow@chromium.org>
Reviewed-by: Doug Arnett <dougarnett@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526898}
Former-commit-id: df224ab1bcee6fdebba820ba3b0d0f4ac6a12f06