net/nqe/network_quality.cc
@@ -13,7 +13,10 @@ base::TimeDelta InvalidRTT() {
 }
 
 NetworkQuality::NetworkQuality()
-    : NetworkQuality(InvalidRTT(), InvalidRTT(), INVALID_RTT_THROUGHPUT) {}
+    : NetworkQuality(InvalidRTT(), InvalidRTT(), INVALID_RTT_THROUGHPUT) {
+  VerifyValueCorrectness();
+  DETACH_FROM_SEQUENCE(sequence_checker_);
+}
 
 NetworkQuality::NetworkQuality(const base::TimeDelta& http_rtt,
                                const base::TimeDelta& transport_rtt,
@@ -21,13 +24,17 @@ NetworkQuality::NetworkQuality(const base::TimeDelta& http_rtt,
     : http_rtt_(http_rtt),
       transport_rtt_(transport_rtt),
       downstream_throughput_kbps_(downstream_throughput_kbps) {
-  DCHECK_GE(downstream_throughput_kbps_, INVALID_RTT_THROUGHPUT);
+  VerifyValueCorrectness();
+  DETACH_FROM_SEQUENCE(sequence_checker_);
 }
 
 NetworkQuality::NetworkQuality(const NetworkQuality& other)
     : NetworkQuality(other.http_rtt_,
                      other.transport_rtt_,
-                     other.downstream_throughput_kbps_) {}
+                     other.downstream_throughput_kbps_) {
+  VerifyValueCorrectness();
+  DETACH_FROM_SEQUENCE(sequence_checker_);
+}
 
 NetworkQuality::~NetworkQuality() = default;
 
@@ -35,16 +42,20 @@ NetworkQuality& NetworkQuality::operator=(const NetworkQuality& other) {
   http_rtt_ = other.http_rtt_;
   transport_rtt_ = other.transport_rtt_;
   downstream_throughput_kbps_ = other.downstream_throughput_kbps_;
+  VerifyValueCorrectness();
+  DETACH_FROM_SEQUENCE(sequence_checker_);
   return *this;
 }
 
 bool NetworkQuality::operator==(const NetworkQuality& other) const {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   return http_rtt_ == other.http_rtt_ &&
          transport_rtt_ == other.transport_rtt_ &&
          downstream_throughput_kbps_ == other.downstream_throughput_kbps_;
 }
 
 bool NetworkQuality::IsFaster(const NetworkQuality& other) const {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   return (http_rtt() == InvalidRTT() || other.http_rtt() == InvalidRTT() ||
           http_rtt() <= other.http_rtt()) &&
          (transport_rtt() == InvalidRTT() ||
@@ -53,6 +64,13 @@ bool NetworkQuality::IsFaster(const NetworkQuality& other) const {
          (downstream_throughput_kbps() == INVALID_RTT_THROUGHPUT ||
           other.downstream_throughput_kbps() == INVALID_RTT_THROUGHPUT ||
           downstream_throughput_kbps() >= other.downstream_throughput_kbps());
+}
+
+void NetworkQuality::VerifyValueCorrectness() const {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
+  DCHECK_LE(INVALID_RTT_THROUGHPUT, http_rtt_.InMilliseconds());
+  DCHECK_LE(INVALID_RTT_THROUGHPUT, transport_rtt_.InMilliseconds());
+  DCHECK_LE(INVALID_RTT_THROUGHPUT, downstream_throughput_kbps_);
 }
 
 }  // namespace internal
